updated link picker markup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -551,6 +551,29 @@
 }
 
 
+/* Form Link (Link Picker)
+ ========================================================================== */
+
+.pk-form-link {
+    display: inline-block;
+    position: relative;
+    max-width: 100%;
+}
+
+.pk-form-link-toggle {
+    display: -ms-flexbox !important;
+    display: -webkit-flex !important;
+    display: flex !important;
+    position: absolute;
+    top: 10%;
+    bottom: 10%;
+    right: 10px;
+    font-size: 13px;
+}
+
+.pk-form-link > input { padding-right: 100px !important; }
+
+
 /* Remove `box-shadow` from Drag'n Drop target
  ========================================================================== */
 
