--- a/app/system/modules/site/app/templates/settings.html
+++ b/app/system/modules/site/app/templates/settings.html
@@ -9,7 +9,7 @@
 <div class="uk-form-row">
     <label for="form-slug" class="uk-form-label">{{ 'Slug' | trans }}</label>
     <div class="uk-form-controls">
-        <input id="form-slug" class="uk-form-width-large" type="text" name="node[slug]" v-model="node.slug">
+        <input id="form-slug" class="uk-form-width-large" type="text" v-model="node.slug">
     </div>
 </div>
 
@@ -20,5 +20,12 @@
             <option value="0">{{ 'Disabled' | trans }}</option>
             <option value="1">{{ 'Enabled' | trans }}</option>
         </select>
+    </div>
+</div>
+
+<div class="uk-form-row">
+    <label for="form-menu-hide" class="uk-form-label">{{ 'Hide in menu' | trans }}</label>
+    <div class="uk-form-controls">
+        <input id="form-menu-hide" class="uk-form-width-large" type="checkbox" v-model="node.data.menu_hide">
     </div>
 </div>
