updated weather icons + cleanup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -159,11 +159,14 @@
 .pk-icon-permission { background-image: url("../../assets/images/icon-permission.svg"); }
 .pk-icon-select { background-image: url("../../assets/images/icon-select.svg"); }
 .pk-icon-home { background-image: url("../../assets/images/icon-home.svg"); }
+.pk-icon-home-active { background-image: url("../../assets/images/icon-home-active.svg"); }
 .pk-icon-settings { background-image: url("../../assets/images/icon-settings.svg"); }
 .pk-icon-refresh { background-image: url("../../assets/images/icon-refresh.svg"); }
 .pk-icon-star { background-image: url("../../assets/images/icon-star.svg"); }
 .pk-icon-share { background-image: url("../../assets/images/icon-share.svg"); }
 .pk-icon-move { background-image: url("../../assets/images/icon-move.svg"); }
+.pk-icon-pen { background-image: url("../../assets/images/icon-pen.svg"); }
+.pk-icon-link { background-image: url("../../assets/images/icon-link.svg"); }
 
 .pk-icon-arrow-up,
 .pk-icon-arrow-down {
@@ -502,13 +505,6 @@
     background: @global-primary-background url("../../assets/images/dashboard-location.jpg") 0 0 no-repeat;
     background-size: cover;
 }
-
-/*
- * Vertical align bottom
- */
-
-.pk-v-align-bottom { vertical-align: bottom; }
-
 
 .pk-overlay-background { background: rgba(255,255,255,0.2); }
 
