--- a/app/system/modules/site/app/templates/settings.html
+++ b/app/system/modules/site/app/templates/settings.html
@@ -24,6 +24,15 @@
 </div>
 
 <div class="uk-form-row">
+    <span class="uk-form-label">{{ 'Restrict Access' | trans }}</span>
+    <div class="uk-form-controls uk-form-controls-text">
+        <p v-repeat="role: roles" class="uk-form-controls-condensed">
+            <label><input type="checkbox" value="{{ role.id }}" v-checkbox="node.roles"> {{ role.name }}</label>
+        </p>
+    </div>
+</div>
+
+<div class="uk-form-row">
     <label for="form-menu-hide" class="uk-form-label">{{ 'Hide in menu' | trans }}</label>
     <div class="uk-form-controls">
         <input id="form-menu-hide" class="uk-form-width-large" type="checkbox" v-model="node.data.menu_hide">
