--- a/app/system/modules/theme/less/uikit/panel.less
+++ b/app/system/modules/theme/less/uikit/panel.less
@@ -99,10 +99,4 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-panel-misc() {
-
-	.uk-panel-box .uk-panel-teaser {
-		border-bottom: 1px solid #eee;
-	}
-
-}
+.hook-panel-misc() {}
