updated admin uikit theme

--- a/app/system/modules/theme/less/uikit/uikit.less
+++ b/app/system/modules/theme/less/uikit/uikit.less
@@ -3,6 +3,10 @@
 
 @import "../../../../../../vendor/assets/uikit/less/uikit.less";
 
+// Components: Navs
+@import "../../../../../../vendor/assets/uikit/less/components/dotnav.less";
+@import "../../../../../../vendor/assets/uikit/less/components/slidenav.less";
+
 // Components: Common
 @import "../../../../../../vendor/assets/uikit/less/components/form-advanced.less";
 @import "../../../../../../vendor/assets/uikit/less/components/form-file.less";
@@ -12,9 +16,12 @@
 @import "../../../../../../vendor/assets/uikit/less/components/progress.less";
 
 // Components: JavaScript
+@import "../../../../../../vendor/assets/uikit/less/components/accordion.less";
 @import "../../../../../../vendor/assets/uikit/less/components/autocomplete.less";
 @import "../../../../../../vendor/assets/uikit/less/components/datepicker.less";
 @import "../../../../../../vendor/assets/uikit/less/components/htmleditor.less";
+@import "../../../../../../vendor/assets/uikit/less/components/slider.less";
+@import "../../../../../../vendor/assets/uikit/less/components/slideshow.less";
 @import "../../../../../../vendor/assets/uikit/less/components/notify.less";
 @import "../../../../../../vendor/assets/uikit/less/components/search.less";
 @import "../../../../../../vendor/assets/uikit/less/components/nestable.less";
@@ -47,6 +54,7 @@
 @import "breadcrumb.less";
 @import "pagination.less";
 @import "tab.less";
+@import "thumbnav.less";
 
 // Elements
 @import "list.less";
@@ -68,6 +76,10 @@
 @import "modal.less";
 @import "offcanvas.less";
 
+// Components: Navs
+@import "dotnav.less";
+@import "slidenav.less";
+
 // Components: Common
 @import "form-advanced.less";
 @import "form-password.less";
@@ -75,6 +87,7 @@
 @import "progress.less";
 
 // Components: JavaScript
+@import "accordion.less";
 @import "autocomplete.less";
 @import "datepicker.less";
 @import "htmleditor.less";
