synced admin uikit theme

--- a/app/system/modules/theme/less/uikit/contrast.less
+++ b/app/system/modules/theme/less/uikit/contrast.less
@@ -36,6 +36,7 @@
 
 .hook-contrast-list-line() {}
 
+
 // Form
 // ========================================================================
 
@@ -78,7 +79,7 @@
     .uk-form input[type="radio"]:checked,
     .uk-form input[type="checkbox"]:checked,
     .uk-form input[type=checkbox]:indeterminate {
-        border-color: @contrast-color;;
+        border-color: @contrast-color;
         background: transparent;
     }
 
