--- a/app/system/modules/theme/less/uikit/modal.less
+++ b/app/system/modules/theme/less/uikit/modal.less
@@ -21,12 +21,6 @@
 
 @modal-caption-color:                           @global-contrast-color;
 
-//
-// New
-//
-
-@modal-border-radius:                           1px;
-
 
 // Component
 // ========================================================================
@@ -37,10 +31,7 @@
 // Sub-object: `uk-modal-dialog`
 // ========================================================================
 
-.hook-modal-dialog() {
-    border-radius: @modal-border-radius;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.3);
-}
+.hook-modal-dialog() { box-shadow: 0 10px 20px rgba(0,0,0,0.3); }
 
 
 // Modifier: `uk-modal-dialog-lightbox`
