--- a/app/system/modules/theme/less/uikit/search.less
+++ b/app/system/modules/theme/less/uikit/search.less
@@ -35,7 +35,7 @@
 // Component
 // ========================================================================
 
-.hook-search() {}
+.hook-search() { z-index: 1; }
 
 .hook-search-icon() {
     height: @global-height;
