major update to site uikit theme

--- a/themes/one/less/theme.less
+++ b/themes/one/less/theme.less
@@ -1,5 +1,8 @@
 @import "uikit/uikit.less";
 
+@icon-font-path: "../../../../../vendor/assets/uikit/fonts";
+@global-image-path: '../../images';
+
 /* ========================================================================
    Theme
  ========================================================================== */
