--- a/themes/one/less/uikit/contrast.less
+++ b/themes/one/less/uikit/contrast.less
@@ -50,8 +50,8 @@
 // Button
 // ========================================================================
 
-.hook-contrast-button() { border-color: transparent; }
-.hook-contrast-button-hover() { border-color: transparent; }
+.hook-contrast-button() {}
+.hook-contrast-button-hover() {}
 .hook-contrast-button-active() {}
 .hook-contrast-button-primary() {}
 .hook-contrast-button-primary-hover() {}
@@ -63,8 +63,8 @@
 
 .hook-contrast-icon-hover() {}
 .hook-contrast-icon-hover-hover() {}
-.hook-contrast-icon-button() { border-color: transparent; }
-.hook-contrast-icon-button-hover() { border-color: transparent; }
+.hook-contrast-icon-button() {}
+.hook-contrast-icon-button-hover() {}
 .hook-contrast-icon-button-active() {}
 
 
