--- a/themes/one/less/uikit/form.less
+++ b/themes/one/less/uikit/form.less
@@ -46,6 +46,7 @@
 @form-stacked-font-weight:                      normal;
 
 @form-horizontal-label-margin-top:              7px;
+@form-horizontal-controls-text-padding-top:     7px;
 
 @form-icon-font-size:                           @global-font-size;
 @form-icon-color:                               @global-muted-color;
