--- a/themes/one/less/uikit/list.less
+++ b/themes/one/less/uikit/list.less
@@ -7,6 +7,7 @@
 // Variables
 // ========================================================================
 
+@list-line-margin-top:                          15px;
 @list-line-border:                              @global-border;
 
 @list-striped-background:                       #fafafa;
