--- a/themes/one/less/uikit/panel.less
+++ b/themes/one/less/uikit/panel.less
@@ -10,9 +10,12 @@
 @panel-title-margin-bottom:                     @global-margin;
 @panel-title-font-size:                         round((@global-font-size * 1.28)); // 18px / 20px
 @panel-title-line-height:                       round((@panel-title-font-size * 1.32)); // 24px / 26px
+@panel-title-font-weight:                       300;
 @panel-title-color:                             @global-color;
 
-@panel-box-padding:                             @global-margin;
+@panel-teaser-margin-bottom:                    @panel-box-padding;
+
+@panel-box-padding:                             25px;
 @panel-box-background:                          @global-background;
 @panel-box-color:                               @global-color;
 @panel-box-title-color:                         @global-color;
@@ -23,8 +26,10 @@
 @panel-box-primary-title-color:                 @global-color;
 
 @panel-box-secondary-background:                @global-default-background;
+@panel-box-secondary-color:                     @global-color;
+@panel-box-secondary-title-color:               @global-color;
 
-@panel-hover-padding:                           @global-margin;
+@panel-hover-padding:                           25px;
 @panel-hover-color:                             @global-color;
 @panel-hover-hover-color:                       @global-color;
 @panel-hover-hover-background:                  @global-background;
@@ -36,14 +41,6 @@
 @panel-divider-gutter:                          @global-grid-gutter;
 @panel-divider-gutter-large:                    @global-grid-gutter-large;
 @panel-divider-border:                          @global-border;
-
-//
-// New
-//
-
-@panel-box-border:                              @global-border;
-
-@panel-hover-border:                            @global-border;
 
 
 // Sub-object: `uk-panel-title`
@@ -61,10 +58,7 @@
 // Modifier: `uk-panel-box`
 // ========================================================================
 
-.hook-panel-box() {
-	border: 1px solid @panel-box-border;
-    border-radius: @global-border-radius;
-}
+.hook-panel-box() { box-shadow: 0 1px 4px rgba(0, 0, 0, 0.09); }
 
 .hook-panel-box-hover() {}
 
@@ -72,7 +66,7 @@
 // Sub-modifier: `uk-panel-box-primary`
 //
 
-.hook-panel-box-primary() {}
+.hook-panel-box-primary() { box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12); }
 
 .hook-panel-box-primary-hover() {}
 
@@ -88,12 +82,9 @@
 // Modifier: `uk-panel-hover`
 // ========================================================================
 
-.hook-panel-hover() {
-    border: 1px solid transparent;
-    border-radius: @global-border-radius;
-}
+.hook-panel-hover() {}
 
-.hook-panel-hover-hover() { border-color: @panel-hover-border; }
+.hook-panel-hover-hover() { box-shadow: 0 1px 4px rgba(0, 0, 0, 0.09); }
 
 
 // Modifier: `uk-panel-header`
@@ -105,14 +96,4 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-panel-misc() {
-
-	.uk-panel-box .uk-panel-teaser {
-        border-top-left-radius: @global-border-radius;
-        border-top-right-radius: @global-border-radius;
-        overflow: hidden;
-        // Fixed `overflow: hidden` to be ignored with border-radius and CSS transforms in Webkit
-        -webkit-transform: translateZ(0);
-    }
-
-}
+.hook-panel-misc() {}
