--- a/themes/one/less/uikit/progress.less
+++ b/themes/one/less/uikit/progress.less
@@ -22,10 +22,7 @@
 // Component
 // ========================================================================
 
-.hook-progress() {
-    box-shadow: inset 0 0 0 1px rgba(0,0,0,0.06);
-    border-radius: @global-border-radius;
-}
+.hook-progress() { border-radius: 500px; }
 
 
 // Sub-object: `progress-bar`
@@ -47,12 +44,4 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-progress-misc() {
-
-    /* Size modifiers
-     ========================================================================== */
-
-    .uk-progress-mini,
-    .uk-progress-small { border-radius: 500px; }
-
-}
+.hook-progress-misc() {}
