--- a/themes/one/less/uikit/subnav.less
+++ b/themes/one/less/uikit/subnav.less
@@ -43,15 +43,15 @@
 
 .hook-subnav-pill() { border-radius: @global-border-radius; }
 
-.hook-subnav-pill-hover() { box-shadow: 0 0 0 1px rgba(0,0,0,0.15); }
+.hook-subnav-pill-hover() {}
 
-.hook-subnav-pill-active() { box-shadow: none; }
+.hook-subnav-pill-active() {}
 
 
 // Disabled state
 // ========================================================================
 
-.hook-subnav-disabled() { box-shadow: none; }
+.hook-subnav-disabled() {}
 
 
 // Miscellaneous
