--- a/themes/one/less/uikit/button.less
+++ b/themes/one/less/uikit/button.less
@@ -12,12 +12,12 @@
 @button-small-height:                           @global-height-small;
 @button-large-height:                           @global-height-large;
 
-@button-line-height:                            @global-height - 2;
-@button-mini-line-height:                       @global-height-mini - 2;
-@button-small-line-height:                      @global-height-small - 2;
-@button-large-line-height:                      @global-height-large - 2;
+@button-line-height:                            @global-height;
+@button-mini-line-height:                       @global-height-mini;
+@button-small-line-height:                      @global-height-small;
+@button-large-line-height:                      @global-height-large;
 
-@button-mini-font-size:                         round((@global-font-size * 0.78)); // 11px / 12px
+@button-mini-font-size:                         round((@global-font-size * 0.85)); // 12px / 14px
 @button-small-font-size:                        round((@global-font-size * 0.85)); // 12px / 14px
 @button-large-font-size:                        round((@global-font-size * 1.14)); // 16px / 18px
 
@@ -26,11 +26,12 @@
 @button-small-padding-horizontal:               12px;
 @button-large-padding-horizontal:               20px;
 
-@button-background:                             @global-default-background;
-@button-color:                                  @global-color;
-@button-hover-background:                       @global-default-hover-background;
-@button-hover-color:                            @global-color;
-@button-active-background:                      @global-default-active-background;
+@button-font-size:                              13px;
+@button-background:                             transparent;
+@button-color:                                  @global-muted-color;
+@button-hover-background:                       transparent;
+@button-hover-color:                            #888;
+@button-active-background:                      transparent;
 @button-active-color:                           @global-color;
 
 @button-primary-background:                     @global-primary-background;
@@ -54,33 +55,30 @@
 @button-danger-active-background:               @global-danger-active-background;
 @button-danger-active-color:                    @global-contrast-color;
 
-@button-disabled-background:                    @global-default-hover-background;
-@button-disabled-color:                         @global-muted-color;
+@button-disabled-background:                    transparent;
+@button-disabled-color:                         lighten(@button-color, 10%);
 
 @button-link-color:                             @global-link-color;
 @button-link-hover-color:                       @global-link-hover-color;
 @button-link-hover-text-decoration:             none;
 @button-link-disabled-color:                    @global-muted-color;
 
-//
-// New
-//
-
-@button-border:                                 rgba(0,0,0,0.1);
-@button-hover-border:                           rgba(0,0,0,0.15);
-
 
 // Component
 // ========================================================================
 
 .hook-button() {
-    border: 1px solid @button-border;
+    min-width: 90px;
+    border: 1px solid lighten(@button-color, 10%);
     border-radius: @global-border-radius;
+    text-transform: uppercase;
+    -webkit-transition: all 0.05s linear;
+    transition: all 0.05s linear;
 }
 
-.hook-button-hover() { border-color: @button-hover-border; }
+.hook-button-hover() { border-color: lighten(@button-hover-color, 10%); }
 
-.hook-button-active() {}
+.hook-button-active() { border-color: lighten(@button-active-color, 10%); }
 
 
 // Color modifiers
@@ -120,13 +118,13 @@
 // Disabled state
 // ========================================================================
 
-.hook-button-disable() { border-color: @button-border; }
+.hook-button-disable() { border-color: lighten(@button-disabled-color, 10%); }
 
 
 // Modifier: `uk-button-link`
 // ========================================================================
 
-.hook-button-link() {}
+.hook-button-link() { min-width: inherit; }
 
 
 // Size modifiers
@@ -139,6 +137,8 @@
 // ========================================================================
 
 .hook-button-misc() {
+
+    .uk-button-link:focus { outline: none; }
 
     /* Sub-object `uk-button-group`
      ========================================================================== */
