--- a/themes/one/less/uikit/dropdown.less
+++ b/themes/one/less/uikit/dropdown.less
@@ -8,28 +8,24 @@
 // ========================================================================
 
 @dropdown-z-index:                              @global-z-index + 20;
+@dropdown-margin-top:                           10px;
+@dropdown-padding:                              25px;
 @dropdown-background:                           #fff;
 @dropdown-color:                                @global-color;
 @dropdown-divider-border:                       @global-border;
 
-@dropdown-navbar-margin:                        5px;
+@dropdown-small-padding:                        @dropdown-padding;
+
+@dropdown-navbar-margin:                        20px;
 @dropdown-navbar-background:                    #fff;
 @dropdown-navbar-color:                         @global-color;
-
-//
-// New
-//
-
-@dropdown-border:                               @global-border;
+@dropdown-navbar-animation:                     uk-fade;
 
 
 // Component
 // ========================================================================
 
-.hook-dropdown() {
-    border: 1px solid @dropdown-border;
-    border-radius: @global-border-radius;
-}
+.hook-dropdown() { box-shadow: 0 1px 3px rgba(0,0,0,0.1); }
 
 
 // Modifier: `uk-dropdown-navbar`
@@ -43,6 +39,8 @@
 
 .hook-dropdown-misc() {
 
-    .uk-dropdown-navbar .uk-nav { margin: -5px -@dropdown-padding; }
+    .uk-dropdown > .uk-nav { margin: (15px - @dropdown-padding) (-@dropdown-padding); }
+
+    .uk-dropdown-small > .uk-nav { margin: (15px - @dropdown-small-padding) (-@dropdown-small-padding); }
 
 }
