--- a/themes/one/less/uikit/icon.less
+++ b/themes/one/less/uikit/icon.less
@@ -11,28 +11,24 @@
 @icon-hover-hover-color:                        @global-color;
 
 @icon-button-height:                            @icon-button-width;
-@icon-button-background:                        @global-default-background;
+@icon-button-background:                        @global-primary-background;
 @icon-button-font-size:                         round((@icon-button-width * 0.5));
-@icon-button-color:                             @global-color;
+@icon-button-color:                             @global-contrast-color;
 
-@icon-button-hover-background:                  @global-default-hover-background;
-@icon-button-hover-color:                       @global-color;
+@icon-button-hover-background:                  @global-primary-hover-background;
+@icon-button-hover-color:                       @global-contrast-color;
 
-@icon-button-active-background:                 @global-default-active-background;
-@icon-button-active-color:                      @global-color;
-
-//
-// New
-//
-
-@icon-button-border:                            rgba(0,0,0,0.1);
-@icon-button-hover-border:                      rgba(0,0,0,0.15);
+@icon-button-active-background:                 @global-primary-active-background;
+@icon-button-active-color:                      @global-contrast-color;
 
 
 // Modifier: `uk-icon-hover`
 // ========================================================================
 
-.hook-icon-hover() {}
+.hook-icon-hover() {
+	-webkit-transition: color 0.05s linear;
+    transition: color 0.05s linear;
+}
 
 .hook-icon-hover-hover() {}
 
@@ -40,13 +36,13 @@
 // Modifier: `uk-icon-button`
 // ========================================================================
 
-.hook-icon-button() { border: 1px solid @icon-button-border; }
+.hook-icon-button() {}
 
 // Hover
-.hook-icon-button-hover() { border-color: @icon-button-hover-border; }
+.hook-icon-button-hover() {}
 
 // Active
-.hook-icon-button-active() { box-shadow: inset 0 1px 5px -1px rgba(0,0,0,0.1); }
+.hook-icon-button-active() {}
 
 
 // Miscellaneous
