--- a/themes/one/less/uikit/modal.less
+++ b/themes/one/less/uikit/modal.less
@@ -8,12 +8,16 @@
 // ========================================================================
 
 @modal-z-index:                                 @global-z-index + 10;
+@modal-background:                              rgba(245,245,245,0.5);
 
+@modal-dialog-padding:                          40px;
 @modal-dialog-background:                       @global-background;
 
-@modal-header-margin-bottom:                    @global-margin;
+@modal-dialog-large-width-large:                1120px;
 
-@modal-footer-margin-top:                       @global-margin;
+@modal-header-margin-bottom:                    @modal-dialog-padding;
+
+@modal-footer-margin-top:                       @modal-dialog-padding;
 
 @modal-caption-color:                           @global-contrast-color;
 
@@ -27,10 +31,7 @@
 // Sub-object: `uk-modal-dialog`
 // ========================================================================
 
-.hook-modal-dialog() {
-    border-radius: @global-border-radius;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
-}
+.hook-modal-dialog() { box-shadow: 0 10px 20px rgba(0,0,0,0.3); }
 
 
 // Modifier: `uk-modal-dialog-lightbox`
@@ -42,24 +43,17 @@
 // Sub-object: `uk-modal-header`
 // ========================================================================
 
-.hook-modal-header() {
-    margin: (-@modal-dialog-padding) (-@modal-dialog-padding) @modal-header-margin-bottom (-@modal-dialog-padding);
-    padding: @modal-dialog-padding;
-    border-bottom: 1px solid @global-border;
-    border-radius: @global-border-radius @global-border-radius 0 0;
-    background: #fafafa;
-}
+.hook-modal-header() { margin-bottom: @modal-header-margin-bottom; }
 
 
 // Sub-object: `uk-modal-footer`
 // ========================================================================
 
 .hook-modal-footer() {
-    margin: @modal-footer-margin-top (-@modal-dialog-padding) (-@modal-dialog-padding) (-@modal-dialog-padding);
-    padding: @modal-dialog-padding;
+    margin: @modal-footer-margin-top -@modal-dialog-padding -@modal-dialog-padding -@modal-dialog-padding !important;
+    padding: 15px @modal-dialog-padding;
+    background: fade(@global-default-background, 30%);
     border-top: 1px solid @global-border;
-    border-radius: 0 0 @global-border-radius @global-border-radius;
-    background: #fafafa;
 }
 
 
