--- a/themes/one/less/uikit/navbar.less
+++ b/themes/one/less/uikit/navbar.less
@@ -25,7 +25,7 @@
 @navbar-nav-active-color:                       @global-color;
 
 @navbar-brand-font-size:                        round((@global-font-size * 1.28)); // 18px / 20px
-@navbar-brand-color:                            @global-muted-color;
+@navbar-brand-color:                            @global-color;
 @navbar-brand-hover-color:                      @global-color;
 
 @navbar-toggle-font-size:                       round((@global-font-size * 1.28)); // 18px / 20px
@@ -42,7 +42,10 @@
 // Sub-object: `uk-navbar-nav`
 // ========================================================================
 
-.hook-navbar-nav() {}
+.hook-navbar-nav() {
+	-webkit-transition: color 0.05s linear;
+    transition: color 0.05s linear;
+}
 
 // Hover
 .hook-navbar-nav-hover() {}
@@ -63,4 +66,12 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-navbar-misc() {}
+.hook-navbar-misc() {
+
+	/*
+     * `uk-navbar-brand`
+     */
+
+    .uk-navbar-brand { font-weight: 300; }
+
+}
