--- a/themes/one/less/uikit/tab.less
+++ b/themes/one/less/uikit/tab.less
@@ -8,13 +8,16 @@
 // ========================================================================
 
 @tab-border:                                    @global-border;
-@tab-color:                                     @global-link-color;
-@tab-hover-border:                              rgba(0,0,0,0.06);
-@tab-hover-background:                          #f5f5f5;
+@tab-padding-horizontal:                        24px;
+@tab-padding-vertical:                          15px;
+@tab-margin-horizontal:                         15px;
+@tab-color:                                     @global-color;
+@tab-hover-border:                              transparent;
+@tab-hover-background:                          transparent;
 @tab-hover-color:                               @global-link-hover-color;
-@tab-active-border:                             @global-border;
-@tab-active-background:                         @global-background;
-@tab-active-color:                              @global-color;
+@tab-active-border:                             @global-primary-background;
+@tab-active-background:                         transparent;
+@tab-active-color:                              @global-link-color;
 @tab-disabled-color:                            @global-muted-color;
 
 
@@ -25,16 +28,46 @@
 // Items
 //
 
-.hook-tab() { border-radius: @global-border-radius @global-border-radius 0 0; }
+.hook-tab() {
+    position: relative;
+    border-width: 0 !important;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    -webkit-transition: color 0.05s linear;
+    transition: color 0.05s linear;
+
+    &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 2px;
+    }
+}
+
 
 // Hover
-.hook-tab-hover() {}
+.hook-tab-hover() {
+
+    &:after { background: @tab-hover-border; }
+
+}
 
 // Active
-.hook-tab-active() {}
+.hook-tab-active() {
+
+    &:after { background: @tab-active-border; }
+
+}
 
 // Disabled
-.hook-tab-disabled() {}
+.hook-tab-disabled() {
+
+    &:after { background: transparent; }
+
+}
 
 
 // Miscellaneous
@@ -42,29 +75,64 @@
 
 .hook-tab-misc() {
 
-    /* Modifier: `uk-tab-bottom'
-     ========================================================================== */
-
-    .uk-tab-bottom > li > a { border-radius: 0 0 @global-border-radius @global-border-radius; }
-
-
-    /* Modifier: `uk-tab-left', `uk-tab-right'
+    /* Modifier: 'tab-bottom'
     ========================================================================== */
 
-    /* Tablet and bigger */
+    .uk-tab-bottom > li > a:after {
+        top: 0;
+        bottom: auto;
+    }
+
+
+    /* Modifier: 'tab-left', 'tab-right'
+     ========================================================================== */
+
+    /* Only tablets and desktops */
     @media (min-width: @breakpoint-medium) {
 
+        .uk-tab-left > li > a,
+        .uk-tab-right > li > a { padding: 0; }
+
+        .uk-tab-left > li > a:after,
+        .uk-tab-right > li > a:after {
+            top: 0;
+            bottom: 0;
+            left: auto;
+            width: 2px;
+            height: auto;
+        }
+
         /*
-         * Modifier: `uk-tab-left'
+         * Modifier: 'tab-left'
          */
 
-        .uk-tab-left > li > a { border-radius: @global-border-radius 0 0 @global-border-radius; }
+        .uk-tab-left > li:not(.uk-active) > a:hover,
+        .uk-tab-left > li:not(.uk-active) > a:focus {
+            margin-right: 0;
+            padding-bottom: 0;
+        }
 
         /*
-         * Modifier: `uk-tab-right'
+         * Modifier: 'tab-right'
          */
 
-        .uk-tab-right > li > a { border-radius: 0 @global-border-radius @global-border-radius 0; }
+        .uk-tab-right > li > a {
+
+            padding-left: @tab-padding-horizontal;
+
+            &:after {
+                right: auto;
+                left: 0;
+            }
+
+        }
+
+        .uk-tab-right > li:not(.uk-active) > a:hover,
+        .uk-tab-right > li:not(.uk-active) > a:focus {
+            padding-left: @tab-padding-horizontal;
+            padding-bottom: 0;
+            margin-left: 0;
+        }
 
     }
 
