--- a/themes/one/less/uikit/tooltip.less
+++ b/themes/one/less/uikit/tooltip.less
@@ -8,9 +8,9 @@
 // ========================================================================
 
 @tooltip-z-index:                               @global-z-index + 30;
-@tooltip-background:                            #f0f0f0;
+@tooltip-background:                            #666;
 
-@tooltip-color:                                 @global-color;
+@tooltip-color:                                 @global-contrast-color;
 @tooltip-font-size:                             round((@global-font-size * 0.85)); // 12px / 14px
 @tooltip-line-height:                           round((@tooltip-font-size * 1.46)); // 18px / 20px
 
@@ -18,10 +18,19 @@
 // Component
 // ========================================================================
 
-.hook-tooltip() { border-radius: 3px; }
+.hook-tooltip() {
+    border-radius: 3px;
+    opacity: 0;
+    -webkit-transition: opacity 0.15s linear;
+    transition: opacity 0.15s linear;
+}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-tooltip-misc() {}
+.hook-tooltip-misc() {
+
+    .uk-tooltip.uk-active { opacity: 1; }
+
+}
