--- a/themes/one/less/uikit/variables.less
+++ b/themes/one/less/uikit/variables.less
@@ -31,23 +31,23 @@
 @global-background:                             #fff;
 @global-border:                                 #e5e5e5;
 
-@global-border-radius:                          3px;
+@global-border-radius:                          2px;
 
 @global-default-background:                     #f5f5f5;
 @global-default-hover-background:               #fafafa;
 @global-default-active-background:              #eee;
 
-@global-primary-background:                     #50A2E5;
-@global-primary-hover-background:               #4091D2;
-@global-primary-active-background:              #3684BE;
+@global-primary-background:                     #489be0;
+@global-primary-hover-background:               #3a94e0;
+@global-primary-active-background:              #3589cf;
 
-@global-success-background:                     #80c96d;
-@global-success-hover-background:               #6dbc58;
-@global-success-active-background:              #61b54c;
+@global-success-background:                     #3DC372;
+@global-success-hover-background:               #23b25c;
+@global-success-active-background:              #0fa74c;
 
-@global-danger-background:                      #f0615b;
-@global-danger-hover-background:                #e54f49;
-@global-danger-active-background:               #e4463a;
+@global-danger-background:                      #e44e56;
+@global-danger-hover-background:                #db353f;
+@global-danger-active-background:               #d2232d;
 
 @global-warning-background:                     #FFB24E;
 
@@ -74,3 +74,9 @@
 //
 
 @global-z-index:                                1000;
+
+
+// Internal
+// ==========================================================================
+
+@global-image-path:                             'images';
